compiler/testData/cli/jvm/firFriendlyErrorIfNoJdkOptionIsSet.out
compiler/testData/cli/jvm/firFriendlyErrorIfNoJdkOptionIsSet.kt:2:11: error: unresolved reference 'NullPointerException'.
    throw NullPointerException()
          ^^^^^^^^^^^^^^^^^^^^
compiler/testData/cli/jvm/firFriendlyErrorIfNoJdkOptionIsSet.kt:2:11: error: type mismatch: expected 'Throwable'; actual 'ERROR CLASS: Unresolved name: NullPointerException'.
    throw NullPointerException()
          ^^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
